# atlas-platform

./: ARCHITECTURE.md  EDUCATION.md  LICENSE  README.md  TRUST-MODEL.md
agent_server/: pyproject.toml  run_server.py
agent_server/src/: config.py  data_sources.py  deploy_worker.py  extraction_data.py  intake_classify.py  intake_skim.py  intake_title_rules.py  intake_worker.py  join_walk.py  main.py  relations_data.py  runtime_active_runs.py  runtime_event_bus.py  schemas.py
agent_server/src/canvas_copilot/: __init__.py  audit.py  blockers.py  (+14 more)
agent_server/tests/: conftest.py  test_architect_runtime_memory.py  test_artifacts_route.py  test_async_subagent_runtime_contract.py  test_audit_citations.py  test_audit_first_gate.py  test_authorization_plumbing.py  test_blockers.py  test_box_gate.py  test_boxless_mint_moot.py  test_bridge_multicanvas.py  test_cable_box_satisfies_mating.py  test_canvas_copilot_tools.py  test_canvas_copilot_yolo.py  test_capture_levers_and_extents.py  test_certification.py  test_code_graph.py  test_codex_interface_routes.py  test_codex_interface_supervisor.py  test_codex_runtime_client.py  test_codex_runtime_routes.py  test_codex_ui_graph.py  test_config.py  test_copilot_chain.py  test_ctx_meter.py  test_database_pool.py  test_departing_blockers_gate.py  test_export_lint.py  test_extraction_workbench_snapshots.py  test_fast_mode_setting.py  test_flag_layer.py  test_full_sdk_relay.py  test_goto_page_yolo_roster.py  test_guided_mode.py  test_handoff_levers.py  test_handoff_truth_lint.py  test_intake_worker_render.py  test_issues_panel.py  test_ledger_hygiene.py  test_lesson_guardrails.py  (+25 more)
(+427 files in other folders)
