[project]
name = "atlas-agent-server"
version = "0.1.0"
description = "Free, API-compatible LangGraph Agent Server for Atlas Platform"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "langgraph>=1.1.9",
    "langchain-core>=1.3.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-redis @ git+https://github.com/CreativeSystemsDevelopment/langgraph-redis.git@9421ab27e116ea466ba47aa28749da09d7bd8d05",
    "langchain-openai>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.2",
    "redis>=7.4.0",
    "redisvl>=0.18.0",
    "sse-starlette>=2.0",
    "claude-agent-sdk>=0.2.110",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "PyMuPDF>=1.27",
    "pdfplumber>=0.11",
    "pdfservices-sdk==4.2.0",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "langgraph-checkpoint-conformance>=0.0.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# load_dotenv() must run before src imports; DEFAULT_SYSTEM_PROMPT lines are intentionally long.
[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]
"src/persistence/settings.py" = ["E501"]
"tests/test_system_prompt_migration.py" = ["E501"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
